--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math formula</title>
+    <title>Chamical formula</title>
 </head>
 <body>
     <p>
-        (a+b+c)<sup>3</sup> = a<sup>3</sup> + b<sup>3</sup> + c<sup>3</sup> + 6abc <br>
-        +3(a<sup>2</sup>b + ab<sup>2</sup> + b<sup>2</sup>c + bc<sup>2</sup> + c<sup>2</sup>a + a<sup>2</sup>c)
-
+        4(M<sub>g</sub>CO<sub>3</sub>)
+        . Mg(OH)<sub>2</sub> . 4H<sub>2</sub>O <br>
+        MgCO<sub>3</sub> . 3H<sub>2</sub>O
     </p>
     <p>
-        (a<sub>1</sub> + a<sub>2</sub> + ... + a<sub>n</sub>)<sup>2</sup> = <br>
-        =a<sub>1</sub><sup>2</sup> + a<sub>2</sub><sup>2</sup> + ... + a<sub>n</sub><sup>2</sup>
-        + 2(a<sub>1</sub>a<sub>2</sub> + a<sub>2</sub>a<sub>3</sub> + ... + a<sub>n-1</sub>a<sub>n</sub>)
+        Na<sub>2</sub>CO<sub>3</sub> . NaHCO<sub>3</sub> . 2H<sub>2</sub>O <br>
+        Na<sub>2</sub>CO<sub>3</sub> . H<sub>2</sub>O
     </p>
 </body>
 </html>
